--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <header>Application Flask Mongo</header>
     <a href="{{ url_for('index')}}" class="btn btn-info"> Home</a>
 
-    <div id="container">
+    <div id="container" style="width: 80%; margin: 10%">
         {% block content %}
         {% endblock content %}
     </div>
