--- a/templates/ajout_user.html
+++ b/templates/ajout_user.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 
-<form action=" url_for('ajout_user')" method="POST">
+<form  method="POST">
 
     <div class="form-row">
       <div class="form-group col-md-6">
