--- a/templates/ajouter_user.html
+++ b/templates/ajouter_user.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <h1>Formulaire de saisie des données</h1>
-    <form action="/submit" method="post">
+    <form  method="post">
       <div class="form-group">
         <label for="name">Nom :</label>
         <input type="text" class="form-control" id="name" name="name" required>
