--- a/templates/posts.html
+++ b/templates/posts.html
@@ -7,11 +7,17 @@
     Les posts
 
     {%for post in posts %}
-    <div class="card" style="width: 18rem;">
+    <div class="card" >
         <div class="card-body">
         <h5 class="card-title">{{ post.title}}</h5>
         <p class="card-text">{{ post.body}}</p>
+
+
+        <button class="btn btn-primary">Modifier</button>
+
+        <button class="btn btn-danger">Supprimer</button>
         </div>
+
     </div>
 
     {%endfor %}
